[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
rpi = ["dep:rppal"]


[dependencies]
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3"
rppal = { version = "0.14.1", features = ["hal"], optional = true }
ctor = "0.2.4"
once_cell = "1.18.0"

axum = { version = "0.6.20", features = ["headers", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
tower-http = {version = "0.4.3", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headers = "0.3"
timer = "0.2.0"
chrono = "0.4.31"
thiserror = "1.0.48"
clap = { version = "4.4.4", features = ["derive"] }

