[package]
name = "rpi-car"
version = "0.1.0"
edition = "2021"

[features]
rpi = ["dep:rppal"]


[dependencies]
futures = "0.3"
rppal = { version = "0.14.1", features = ["hal"], optional = true }
axum = { version = "0.6.20", features = ["headers", "ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
tower-http = {version = "0.4.3", features = ["full"]}
thiserror = "1.0.48"
clap = { version = "4.4.4", features = ["derive"] }

